examples/errors/error_modulo_by_zero.cay
// Error测试：取模零
public class TestModuloByZero {
    public static void main() {
        int x = 10;
        int y = 0;
        int result = x % y;
        println(result);
    }
}
